# convex_polygon_library

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml
cmake/modules/: FindEigen3.cmake  FindNumPy.cmake
examples/: CMakeLists.txt  example1.cpp  matplotlibcpp.h  visualization_utilities.cpp  visualization_utilities.h
include/convex_polygon_library/: convex_hull.h  convex_polygon.h  utilities.h  visualization_utilities.h
include/polygon_operations/: convex_hull.h  convex_polygon.h
src/: CMakeLists.txt  convex_hull.cpp  convex_main.cpp  convex_polygon.cpp  utilities.cpp  visualization_utilities.cpp
test/: CMakeLists.txt  convex_hull_test.cpp  convex_polygon_test.cpp  utilities_test.cpp
